# cognitive-interface

./: ABOUT_THE_MIND_BEHIND.md  CI_AR_PRESENTATION.md  COGNITIVE_AR_INTERFACE.md  COGNITIVE_SHADOW_PLATFORM.md  CONCEPT_RETINAL_PROJECTION.md  CONTRIBUTING.md  EXTENDED_CONCEPTS.md  INFRASTRUCTURE_FOR_SPATIAL_COMMERCE_&_INDUSTRY.md  INVERSE_ACOUSTIC_SCATTERING_FOR_UGHT.md  LICENSE  MASTER_INDEX.md  PASSIVE_ACOUSTIC_SHADOW_TRACKING.md  PAY_PER_VIEW_NOT_PAY_PER_SPY.md  README.md  REPOSITORY_STRUCTURE.md  RUN_ALL_FEATURES.md  SHADOW_MESH.md  ULTRASOUND_HAND_TRACKING_MODULE.md
docs/architecture/: ARCHITECTURE.md  HARDWARE_ABSTRACTION_LAYER_(HALL).md
docs/business/: APP_CENTER.md  CHALLENGES_AND_SOLUTIONS.md  CONTEXTUAL_CONSENT_ASD.md  PAY_PER_VIEW_NOT_PAY_PER_SPY.md
docs/patents/: MASTER_INDEX.md
docs/presentations/: COGNITIVE_AR_VISUAL_DESIGN.md  FULL_PRESENTATION_CI_AR.md
docs/roadmap/: CI_AR_2035.md  ROADMAP_STEROIDS.md
docs/technical/: ULTRASONIC_GLOVE_TRACKING.md
docs/technical/feature-distributed-network/: Dockerfile  README.md  docker-compose.yml  requirements.txt
docs/technical/feature-distributed-network/coordination/: __init__.py  array_coordinator.py
docs/technical/feature-distributed-network/fusion/: __init__.py  global_map.py  shadow_fusion.py
docs/technical/feature-distributed-network/network/: __init__.py  ptp_sync.py  transport.py
docs/technical/feature-distributed-network/node/: __init__.py  shadow_node.py
docs/technical/feature-distributed-network/simulation/: multi_array_sim.py
docs/technical/feature-distributed-network/tests/: __init__.py  benchmark_distributed.py  test_fusion.py  test_network.py  test_sync.py
docs/technical/feature-hal-sim2real/: FEATURE_SUMMARY.md  README.md  pyproject.toml  requirements-dev.txt  requirements-raspberry-pi.txt  requirements.txt
docs/technical/feature-hal-sim2real/calibration/: __init__.py  auto_calibrate.py  uncertainty.py
docs/technical/feature-hal-sim2real/drivers/raspberry_pi/: __init__.py  emitter_pwm.py  glove_gpio.py  microphone_i2s.py
docs/technical/feature-hal-sim2real/examples/: raspberry_pi_setup.py
docs/technical/feature-hal-sim2real/hal/: __init__.py  base.py  factory.py
docs/technical/feature-hal-sim2real/scripts/: calibrate_array.py
docs/technical/feature-hal-sim2real/sim2real/: __init__.py  bridge.py
docs/technical/feature-hal-sim2real/tests/: __init__.py  conftest.py  test_calibration.py  test_hal.py  test_sim2real.py
docs/technical/feature-intelligence-layer/: README.md  export_tflite.py  inference.py  main.py  model.py  requirements.txt  train.py
docs/technical/feature-intelligence-layer/api/: __init__.py  intelligence_api.py
docs/technical/feature-intelligence-layer/examples/: smartphone_integration.py
docs/technical/feature-intelligence-layer/inference/: __init__.py  edge_inference.py  inference.py
docs/technical/feature-intelligence-layer/models/: __init__.py  best_model.keras  intent_classifier.keras  intent_classifier.py  intent_classifier_float16.tflite  intent_classifier_float32.tflite  metadata.json  property_predictor.py
docs/technical/feature-intelligence-layer/tests/: benchmark_accuracy.py  test_inference.py  test_model.py  test_models.py
docs/technical/feature-intelligence-layer/training/: __init__.py  export_tflite.py  generate_dataset.py  train.py  train_intent.py
docs/technical/feature-shadow-mesh-3d/: README.md  __init__.py  example_blender_export.py  example_unreal_export.py  material_properties.py  mesh_generator.py  physics_inference.py
docs/technical/feature-shadow-mesh-3d/exporters/: __init__.py  gltf_exporter.py  obj_exporter.py
docs/technical/feature-shadow-mesh-3d/tests/: __init__.py  benchmark_3d.py  test_mesh_generation.py  test_physics_inference.py
docs/technical/feature-universal-engine/: README.md  __init__.py  example_usage.py  requirements.txt
docs/vision/: CONCEPT_FRAMEWORK.md
src/core/: PHYSICS_INTERFACE.py  UNIVERSAL_SHADOW_ENGINE.md
src/intelligence/: SHADOW_INTELLIGENCE_LAYER.md
src/network/: DISTRIBUTED_SHADOW_NETWORK.md
(+25 files in other folders)
